# zk-hyle

./: Cargo.toml  README.md  flask-server.py  hashed-interests.json  treecat.py
contract/: Cargo.toml
contract/src/: lib.rs
host/: Cargo.toml
host/src/: api.rs  http_server.rs  main.rs
methods/guest/src/: main.rs
rs-tfhe/: .gitignore
rs-tfhe/set_intersect/: main.rs
rs_tfhe/: Cargo.toml
rs_tfhe/set_intersect/: main.rs
rs_tfhe/src/: gates.rs  key.rs  lib.rs  mulfft.rs  tlwe.rs  trgsw.rs  trlwe.rs  utils.rs
