[package]
name = "rs_tfhe"
version = "0.1.0"
authors = ["Jay Logelin <jay.logelin@gmail.com>", "Naoki Matsumoto <m.naoki9911@gmail.com>"]
edition = "2021"

[lib]  # Ensure this section exists
name = "rs_tfhe"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#and = "0.7.3"
rand = "0.9.0"
#and_distr = "0.3.0"
rand_distr = "0.5.1"
# getrandom = { version = "0.1.16", default-features = false, features = ["custom"] }

[build-dependencies]
cc = "1.0.65"

[dev-dependencies]
core_extensions = "^1.5"

[features]
bootstrapping = []
fft_avx = []
fft_fma = []

# default = ["bootstrapping", "fft_fma"]
default = ["bootstrapping"]